--- a/.github/workflows/pr-check.yml
+++ b/.github/workflows/pr-check.yml
@@ -4,13 +4,13 @@ on:
   pull_request_target:
     branches:
       - main
-  pull_request:
-    branches:
-      - main
+  # pull_request:
+  #   branches:
+  #     - main
 
 jobs:
   PR-Check:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     permissions:
       pull-requests: write
 
@@ -75,6 +75,7 @@ jobs:
           ${{ steps.pr-convention.outputs.error_message }}
           ```
 
+
       # Delete a previous comment when the issue has been resolved
     - name: Delete Comment if PR Title is conventional
       if: ${{ steps.lint_pr_title.outputs.error_message == null }}
@@ -90,7 +91,7 @@ jobs:
         fetch-depth: 1
 
     - name: Setup Java11
-      uses: actions/setup-java@v4
+      uses: actions/setup-java@v3
       with:
          distribution: 'zulu'
          java-version: '11'
