fix dependency conflict with interactive 0.4

--- a/interactive_engine/pom.xml
+++ b/interactive_engine/pom.xml
@@ -870,6 +870,32 @@
           </execution>
         </executions>
       </plugin>
+      <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-shade-plugin</artifactId>
+            <version>3.2.4</version>
+            <executions>
+                <execution>
+                    <phase>package</phase>
+                    <goals>
+                        <goal>shade</goal>
+                    </goals>
+                    <configuration>
+                        <artifactSet>
+                            <includes>
+                                <include>com.alibaba.graphscope.interactive</include>
+                            </includes>
+                        </artifactSet>
+                        <relocations>
+                            <relocation>
+                                <pattern>com.alibaba.graphscope.gaia.proto</pattern>
+                                <shadedPattern>shaded.com.alibaba.graphscope.gaia.proto</shadedPattern>
+                            </relocation>
+                        </relocations>
+                    </configuration>
+                </execution>
+            </executions>
+        </plugin>
     </plugins>
   </build>
 
