--- a/.github/workflows/gae.yml
+++ b/.github/workflows/gae.yml
@@ -46,6 +46,9 @@ jobs:
           ~/.cmake
           /opt/graphscope
           /opt/vineyard
+          /usr/share
+          /usr/local
+          /usr/lib
 
     - name: Install dependencies
       if: steps.cache-restore.outputs.cache-hit != 'true' 
@@ -55,7 +58,15 @@ jobs:
         # When ready, change to use this:
         # gsctl install-deps dev-analytical
         gsctl install-deps dev
-        bash ../../.github/free-disk-space.sh || true
+        df -h
+        echo "Removing large directories"
+        # deleting 15GB
+        rm -rf /usr/share/dotnet/
+        sudo rm -rf /usr/share/dotnet
+        sudo rm -rf /usr/local/lib/android
+        sudo rm -rf /opt/ghc
+        sudo rm -rf /opt/hostedtoolcache/CodeQL
+        df -h
 
     - name: Cache deps
       if: steps.cache-restore.outputs.cache-hit != 'true' 
@@ -70,7 +81,10 @@ jobs:
           ~/.cargo
           ~/.cmake
           /opt/graphscope
-          /opt/vineyard    
+          /opt/vineyard
+          /usr/share
+          /usr/local
+          /usr/lib
 
     - name: Build
       env:
@@ -82,10 +96,6 @@ jobs:
         cd build
         cmake -DBUILD_TESTS=OFF ..
         make
-
-    - name: Setup tmate session
-      if: ${{ failure() }}
-      uses: mxschmitt/action-tmate@v3
 
     # - name: Run Cpp Test
     #   env:
