--- a/.github/workflows/build-graphscope-wheels-macos.yml
+++ b/.github/workflows/build-graphscope-wheels-macos.yml
@@ -48,7 +48,7 @@ jobs:
 
         # Not sure when the first installation would fail, saying that the lock of python3.10 is taken
         # However the second trial would success.
-        python3 -m pip install click packaging
+        python3 -m pip install click
         python3 gsctl.py install-deps dev || true
         python3 gsctl.py install-deps dev
         echo "export PATH=/usr/local/opt/coreutils/libexec/gnubin:\$PATH" >> ~/.graphscope_env
@@ -166,7 +166,7 @@ jobs:
         sudo mkdir /opt/graphscope
         sudo chown -R $(id -u):$(id -g) /opt/graphscope
 
-        python3 -m pip install click packaging
+        python3 -m pip install click
         python3 gsctl.py install-deps dev || true
         python3 gsctl.py install-deps dev
 
