--- a/k8s/actions-runner-controller/manylinux/Makefile
+++ b/k8s/actions-runner-controller/manylinux/Makefile
@@ -1,3 +1,7 @@
+MKFILE_PATH            := $(abspath $(lastword $(MAKEFILE_LIST)))
+WORKING_DIR            := $(dir $(MKFILE_PATH))
+VINEYARD_VERSION_FILE  := ${WORKING_DIR}/../../../V6D_VERSION
+
 # it's ok to use registry-vpc here as building the runner image for CI
 # is only for internal usage and usually happens on ECS.
 ifeq ($(REGISTRY),)
@@ -12,8 +16,7 @@ TARGETPLATFORM ?= $(shell arch)
 RUNNER_VERSION ?= 2.318.0
 DOCKER_VERSION ?= 24.0.7
 
-VINEYARD_VERSION ?= v0.22.0
-BUILDER_VERSION ?= $(VINEYARD_VERSION)
+VINEYARD_VERSION ?= $(shell cat $(VINEYARD_VERSION_FILE))
 
 # default list of platforms for which multiarch image is built
 ifeq (${PLATFORMS}, )
@@ -26,5 +29,5 @@ build:
 		--build-arg TARGETPLATFORM=${TARGETPLATFORM} \
 		--build-arg RUNNER_VERSION=${RUNNER_VERSION} \
 		--build-arg DOCKER_VERSION=${DOCKER_VERSION} \
-		--build-arg BUILDER_VERSION=$(BUILDER_VERSION) \
+		--build-arg VINEYARD_VERSION=$(VINEYARD_VERSION) \
 		-t ${NAME}:${TAG} .
