add cmake args to support no-optimize for host
Committed-by: xiaolei.zl from Dev container

--- a/k8s/Makefile
+++ b/k8s/Makefile
@@ -21,6 +21,8 @@ PROFILE ?= release
 CI ?= false
 # Flex Coordinator
 ENABLE_COORDINATOR ?= false
+# Flex Interactive: controls whether optimize for host, should be enabled when building images
+OPTIMIZED_FOR_HOST:= OFF
 
 BUILD_PROGRESS  	?= auto
 
@@ -167,6 +169,7 @@ flex-interactive:
 		--build-arg BUILDER_VERSION=$(BUILDER_VERSION) \
 		--build-arg PLATFORM=${PLATFORM} \
 		--build-arg ARCH=${ARCH} \
+		--build-arg OPTIMIZED_FOR_HOST=${OPTIMIZED_FOR_HOST} \
 		-t graphscope/interactive:${VERSION}  \
 		-f ${DOCKERFILES_DIR}/flex-interactive.Dockerfile .
 
