--- a/flex/CMakeLists.txt
+++ b/flex/CMakeLists.txt
@@ -14,7 +14,7 @@ option(BUILD_TEST "Whether to build test" ON)
 option(BUILD_DOC "Whether to build doc" OFF)
 option(BUILD_ODPS_FRAGMENT_LOADER "Whether to build odps fragment loader" OFF)
 option(USE_PTHASH "Whether to use pthash" OFF)
-option(OPTIMIZE_ON_HOST "Whether to optimize on host" ON) # Whether to build optimized code on host
+option(OPTIMIZE_FOR_HOST "Whether to optimize on host" ON) # Whether to build optimized code on host
 
 #print options
 message(STATUS "Build test: ${BUILD_TEST}")
@@ -78,7 +78,7 @@ else ()
 endif ()
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fopenmp -Werror -std=c++17 -Wall -fPIC")
-if (OPTIMIZE_ON_HOST)
+if (OPTIMIZE_FOR_HOST)
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -march=native")
 endif()
 
