--- a/.github/workflows/pr-check.yml
+++ b/.github/workflows/pr-check.yml
@@ -208,7 +208,7 @@ jobs:
       id: preview
       uses: cloudflare/pages-action@v1
       # CAUTION: If you want to preview the changed docs, you may want to submit PR from the main repo.
-      if: ${{ steps.changes.outputs.docs && !github.event.pull_request.head.repo.fork }} 
+      if: ${{ steps.changes.outputs.docs && github.event.pull_request.head.repo.name == github.repository }} 
       with:
         apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
         accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
