--- a/flex/bin/CMakeLists.txt
+++ b/flex/bin/CMakeLists.txt
@@ -16,10 +16,9 @@ target_link_libraries(rt_admin flex_utils flex_rt_mutable_graph flex_graph_db)
 install_without_export_flex_target(rt_admin)
 
 
-add_executable(rt_runtime rt_runtime.cc)
-target_link_libraries(rt_runtime flex_utils  flex_graph_db)
-install_without_export_flex_target(rt_runtime)
-
+add_executable(adhoc_runner adhoc_runner.cc)
+target_link_libraries(adhoc_runner flex_utils flex_graph_db)
+install_without_export_flex_target(adhoc_runner)
 
 add_executable(flex_analytical_engine flex_analytical_engine.cc)
 target_link_libraries(flex_analytical_engine flex_immutable_graph flex_bsp ${GLOG_LIBRARIES} ${GFLAGS_LIBRARIES})
