--- a/interactive_engine/compiler/pom.xml
+++ b/interactive_engine/compiler/pom.xml
@@ -126,7 +126,8 @@
         </dependency>
         <dependency>
             <groupId>org.neo4j</groupId>
-            <artifactId>neo4j</artifactId>
+            <artifactId>neo4j-shaded</artifactId>
+            <version>4.4.0</version>
         </dependency>
         <dependency>
             <groupId>org.neo4j.driver</groupId>
