modify shade plugin package version

--- a/interactive_engine/pom.xml
+++ b/interactive_engine/pom.xml
@@ -873,7 +873,7 @@
       <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-shade-plugin</artifactId>
-            <version>3.2.4</version>
+            <version>${maven.shade.version}</version>
             <executions>
                 <execution>
                     <phase>package</phase>
