--- a/interactive_engine/pom.xml
+++ b/interactive_engine/pom.xml
@@ -71,6 +71,7 @@
       <properties>
         <rust.compile.target>groot</rust.compile.target>
         <scala.version>2.13.9</scala.version>
+        <neo4j.version>4.4.0-SHADED</neo4j.version>
       </properties>
       <modules>
         <module>assembly</module>
@@ -82,6 +83,31 @@
         <module>executor/engine/pegasus/clients/java/client</module>
         <module>compiler</module>
       </modules>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>exec-maven-plugin</artifactId>
+            <executions>
+              <execution>
+                <id>shade-neo4j</id>
+                <phase>validate</phase>
+                <goals>
+                  <goal>exec</goal>
+                </goals>
+                <configuration>
+                  <executable>mvn</executable>
+                  <arguments>
+                    <argument>-f</argument>
+                    <argument>neo4j-shaded/pom.xml</argument>
+                    <argument>install</argument>
+                  </arguments>
+                </configuration>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
     </profile>
     <profile>
       <id>groot-data-load</id>
