--- a/.github/workflows/gss.yml
+++ b/.github/workflows/gss.yml
@@ -80,8 +80,8 @@ jobs:
         export SCCACHE_DIR=~/.cache/sccache
         export RUSTC_WRAPPER=/usr/local/bin/sccache
         cd ${GITHUB_WORKSPACE}/interactive_engine
-        mvn clean install -P groot -Drust.compile.mode=debug -DskipTests --quiet
-        mvn clean install -Pgroot-data-load --quiet
+        mvn clean install -P groot -Drust.compile.mode=debug -DskipTests --no-transfer-progress
+        mvn clean install -Pgroot-data-load --no-transfer-progress
         sccache --show-stats
 
     - name: Gremlin Test
