--- a/.github/workflows/k8s-ci.yml
+++ b/.github/workflows/k8s-ci.yml
@@ -607,7 +607,7 @@ jobs:
           minikube image load graphscope/interactive-executor:${SHORT_SHA}
 
           export PYTHONPATH=${GITHUB_WORKSPACE}/python:${PYTHONPATH}
-          cd ${GITHUB_WORKSPACE}/interactive_engine && mvn clean install --quiet -DskipTests -Drust.compile.skip=true -P graphscope
+          cd ${GITHUB_WORKSPACE}/interactive_engine && mvn clean install -DskipTests -Drust.compile.skip=true -P graphscope --no-transfer-progress
           cd ${GITHUB_WORKSPACE}/interactive_engine/tests
           # ./function_test.sh 8111 1
           ./function_test.sh 8112 2
