--- a/interactive_engine/pom.xml
+++ b/interactive_engine/pom.xml
@@ -71,6 +71,7 @@
       <properties>
         <rust.compile.target>groot</rust.compile.target>
         <scala.version>2.13.9</scala.version>
+        <neo4j.version>4.4.0-SHADED</neo4j.version>
       </properties>
       <modules>
         <module>assembly</module>
@@ -82,6 +83,32 @@
         <module>executor/engine/pegasus/clients/java/client</module>
         <module>compiler</module>
       </modules>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>exec-maven-plugin</artifactId>
+            <executions>
+              <execution>
+                <id>shade-neo4j</id>
+                <phase>validate</phase>
+                <goals>
+                  <goal>exec</goal>
+                </goals>
+                <configuration>
+                  <executable>mvn</executable>
+                  <arguments>
+                    <argument>-f</argument>
+                    <argument>neo4j-shaded/pom.xml</argument>
+                    <argument>install</argument>
+                  </arguments>
+                </configuration>
+              </execution>
+            </executions>
+            <inherited>false</inherited>
+          </plugin>
+        </plugins>
+      </build>
     </profile>
     <profile>
       <id>groot-data-load</id>
@@ -225,6 +252,7 @@
     <maven.compiler.target>1.8</maven.compiler.target>
 
     <neo4j.version>4.4.0</neo4j.version>
+    <neo4j.driver.version>4.4.0</neo4j.driver.version>
     <interactive.sdk.version>0.4</interactive.sdk.version>
   </properties>
 
@@ -647,7 +675,7 @@
       <dependency>
         <groupId>org.neo4j.driver</groupId>
         <artifactId>neo4j-java-driver</artifactId>
-        <version>${neo4j.version}</version>
+        <version>${neo4j.driver.version}</version>
         <scope>test</scope>
       </dependency>
       <dependency>
